@@ -28,11 +28,11 @@ package org.omegat.core.spellchecker;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 import java.util.regex.Matcher;
 
 import org.apache.commons.io.FilenameUtils;
@@ -81,9 +81,9 @@ public class DictionaryManager {
             String[] parts = dic.split("_");
             Locale locale;
             if (parts.length == 1) {
-                locale = new Locale(parts[0]);
+                locale = Locale.of(parts[0]);
             } else {
-                locale = new Locale(parts[0], parts[1]);
+                locale = Locale.of(parts[0], parts[1]);
             }
             result.add(dic + " - " + locale.getDisplayName());
         }
@@ -145,8 +145,8 @@ public class DictionaryManager {
                 }
 
                 if (match) {
-                    result.add(new SpellingDictionaryEntry(affixName, SpellCheckDictionaryType.HUNSPELL,
-                                    true));
+                    result.add(
+                            new SpellingDictionaryEntry(affixName, SpellCheckDictionaryType.HUNSPELL, true));
                 }
             }
         }
@@ -159,10 +159,10 @@ public class DictionaryManager {
             }
         }
 
-        for (String language: SpellCheckerManager.getHunspellDictionaryLanguages()) {
+        for (String language : SpellCheckerManager.getHunspellDictionaryLanguages()) {
             result.add(new SpellingDictionaryEntry(language, SpellCheckDictionaryType.HUNSPELL, false));
         }
-        for (String language: SpellCheckerManager.getMorfologikDictionaryLanguages()) {
+        for (String language : SpellCheckerManager.getMorfologikDictionaryLanguages()) {
             result.add(new SpellingDictionaryEntry(language, SpellCheckDictionaryType.MORFOLOGIK, false));
         }
 
@@ -181,7 +181,8 @@ public class DictionaryManager {
         if (lang == null || lang.isEmpty()) {
             return false;
         }
-        var target = getLocalDictionaryEntries().stream().filter(it -> it.languageCode.equals(lang)).findFirst();
+        Optional<SpellingDictionaryEntry> target = getLocalDictionaryEntries().stream().filter(
+                it -> it.languageCode.equals(lang)).findFirst();
         if (target.isPresent()) {
             String base = getDirectory() + File.separator + lang;
             if (target.get().type.equals(SpellCheckDictionaryType.HUNSPELL)) {
@@ -203,6 +204,7 @@ public class DictionaryManager {
      * return a list of names of installable dictionaries (e.g. en_US - english
      * (USA))
      */
+    @Deprecated
     public List<String> getInstallableDictionaryNameList() throws IOException {
         return getDictionaryNameList(getInstallableDictionaryCodeList());
     }
@@ -234,8 +236,11 @@ public class DictionaryManager {
         List<String> result = new ArrayList<>();
 
         // download the file
-        URL url = new URL(Preferences.getPreference(Preferences.SPELLCHECKER_DICTIONARY_URL));
-        String htmlfile = HttpConnectionUtils.getURL(url);
+        String dictionary = Preferences.getPreference(Preferences.SPELLCHECKER_DICTIONARY_URL);
+        if (dictionary == null || dictionary.isEmpty()) {
+            return result;
+        }
+        String htmlfile = HttpConnectionUtils.getURL(URI.create(dictionary).toURL());
 
         // build a list of available language codes
         Matcher matcher = PatternConsts.DICTIONARY_ZIP.matcher(htmlfile);
@@ -261,18 +266,19 @@ public class DictionaryManager {
      */
     @Deprecated
     public void installRemoteDictionary(String langCode) throws IOException {
-        String from = Preferences.getPreference(Preferences.SPELLCHECKER_DICTIONARY_URL) + "/" + langCode + ".zip";
+        String dictionary = Preferences.getPreference(Preferences.SPELLCHECKER_DICTIONARY_URL);
+        String from = dictionary + "/" + langCode + ".zip";
 
         // Dirty hack for the French dictionary. Since it is named
         // fr_FR_1-3-2.zip, we remove the "_1-3-2" portion
         // [ 2138846 ] French dictionary cannot be downloaded and installed
-        int pos = langCode.indexOf("_1-3-2", 0);
+        int pos = langCode.indexOf("_1-3-2");
         if (pos != -1) {
             langCode = langCode.substring(0, pos);
         }
-        List<String> expectedFiles = Arrays.asList(langCode + OConsts.SC_AFFIX_EXTENSION,
+        List<String> expectedFiles = List.of(langCode + OConsts.SC_AFFIX_EXTENSION,
                 langCode + OConsts.SC_DICTIONARY_EXTENSION);
-        HttpConnectionUtils.downloadZipFileAndExtract(new URL(from), dir, expectedFiles);
+        HttpConnectionUtils.downloadZipFileAndExtract(URI.create(from).toURL(), dir, expectedFiles);
     }
 
     public static class SpellingDictionaryEntry {
