@@ -397,8 +397,8 @@ public class FilterVisitor extends NodeVisitor {
         String[] parentElementTags = { "HEAD", "HTML" };
 
         return (tagname.equals("BR") && options.getParagraphOnBr())
-                || Arrays.asList(parentElementTags).contains(tagname)
-                || Arrays.asList(blockElementTags).contains(tagname);
+                || List.of(parentElementTags).contains(tagname)
+                || List.of(blockElementTags).contains(tagname);
     }
 
     /** Should the content of this tag be kept intact? */
@@ -466,17 +466,14 @@ public class FilterVisitor extends NodeVisitor {
 
         // DETERMINE FIRST TAG IN PRECEDING TO INCLUDE
         int firstTagToIncludeFromPreceding;
-        for (firstTagToIncludeFromPreceding = 0; firstTagToIncludeFromPreceding <= lastPrecedingNodePosition;
-             firstTagToIncludeFromPreceding++) {
+        for (firstTagToIncludeFromPreceding = 0; firstTagToIncludeFromPreceding <= lastPrecedingNodePosition; firstTagToIncludeFromPreceding++) {
             Node startNode = allNodesInParagraph.get(firstTagToIncludeFromPreceding);
-            if (startNode instanceof Tag) {
-                Tag openingTag = (Tag) startNode;
+            if (startNode instanceof Tag openingTag) {
                 int recursion = 1;
                 boolean found = false;
                 for (int i = firstTagToIncludeFromPreceding + 1; i <= lastTranslatableNodePosition; i++) {
                     Node candidateNode = allNodesInParagraph.get(i);
-                    if (candidateNode instanceof Tag) {
-                        Tag candidateTag = (Tag) candidateNode;
+                    if (candidateNode instanceof Tag candidateTag) {
                         if (candidateTag.getTagName().equals(openingTag.getTagName())) {
                             if (candidateTag.isEndTag()) {
                                 recursion--;
@@ -506,15 +503,12 @@ public class FilterVisitor extends NodeVisitor {
         int lastTagKeptInFollowing;
         for (lastTagKeptInFollowing = lastFollowingPosition; lastTagKeptInFollowing > lastTranslatableNodePosition; lastTagKeptInFollowing--) {
             Node endNode = allNodesInParagraph.get(lastTagKeptInFollowing);
-            if (endNode instanceof Tag) {
-                Tag closingTag = (Tag) endNode;
-
+            if (endNode instanceof Tag closingTag) {
                 int recursion = 1;
                 boolean found = false;
                 for (int i = lastTagKeptInFollowing - 1; i > lastPrecedingNodePosition; i--) {
                     Node candidateNode = allNodesInParagraph.get(i);
-                    if (candidateNode instanceof Tag) {
-                        Tag candidateTag = (Tag) candidateNode;
+                    if (candidateNode instanceof Tag candidateTag) {
                         if (candidateTag.getTagName().equals(closingTag.getTagName())) {
                             if (candidateTag.isEndTag()) {
                                 recursion++;
@@ -708,8 +702,7 @@ public class FilterVisitor extends NodeVisitor {
             // trying to lookup for appropriate starting tag
             int recursion = 1;
             for (int i = sTags.size() - 1; i >= 0; i--) {
-                if (sTags.get(i) instanceof Tag) {
-                    Tag othertag = (Tag) sTags.get(i);
+                if (sTags.get(i) instanceof Tag othertag) {
                     if (othertag.getTagName().equals(tag.getTagName())) {
                         if (othertag.isEndTag()) {
                             recursion++;
@@ -788,8 +781,7 @@ public class FilterVisitor extends NodeVisitor {
             String shortcut = sShortcuts.get(i);
             int pos = -1;
             while ((pos = str.indexOf(shortcut, pos + 1)) >= 0) {
-                if (sTags.get(i) instanceof Tag) {
-                    Tag tag = (Tag) sTags.get(i);
+                if (sTags.get(i) instanceof Tag tag) {
                     try {
                         str = str.substring(0, pos) + "<" + tag.getText() + ">"
                                 + str.substring(pos + shortcut.length());
@@ -798,8 +790,7 @@ public class FilterVisitor extends NodeVisitor {
                         // but prevent endless loop
                         break;
                     }
-                } else if (sTags.get(i) instanceof Remark) {
-                    Remark comment = (Remark) sTags.get(i);
+                } else if (sTags.get(i) instanceof Remark comment) {
                     try {
                         str = str.substring(0, pos) + comment.toHtml()
                                 + str.substring(pos + shortcut.length());
